# mfti

./: CMakeLists.txt  mfti_1A.cpp  mfti_1B.cpp  mfti_1C.cpp  mfti_2C.cpp  mfti_3A.cpp  mfti_3B.cpp  mfti_3C.cpp  mfti_4A.cpp  mfti_4B.cpp  mfti_4C.cpp  mfti_4D.cpp  mfti_5A.cpp  mfti_6A.cpp  mfti_6B.cpp  mfti_7C.cpp  mfti_olimpA.cpp  mfti_olimpB.cpp  mfti_olimpteamA.cpp  mfti_olimpteamI.cpp
LOSH1/: mfti_1A.cpp  mfti_1C.cpp  mfti_2A.cpp  mfti_2B.cpp  mfti_3A.cpp  mfti_5B.cpp  mfti_6B.cpp  mfti_olimpteamC.cpp  mfti_olimpteamH.cpp
LOSH2/: LOSH2_1A.cpp  LOSH2_1B.cpp  LOSH2_1F.cpp  LOSH2_2A.cpp  LOSH2_2B.cpp
ZOSH1/: ONLYforTESTING.cpp  ZOSH_1A.cpp  ZOSH_1B.cpp  ZOSH_1H.cpp  ZOSH_2A.cpp  ZOSH_2D.cpp  ZOSH_2E.cpp  ZOSH_2F.cpp  ZOSH_2H.cpp  ZOSH_3A.cpp  ZOSH_3B.cpp  ZOSH_3C.cpp  ZOSH_3D.cpp  ZOSH_3F.cpp  ZOSH_4A.cpp  ZOSH_4B.cpp  ZOSH_4C.cpp  ZOSH_4D.cpp  ZOSH_4E.cpp  ZOSH_5B.cpp  ZOSH_5C.cpp  ZOSH_5G.cpp  ZOSH_5H.cpp  ZOSH_5I.cpp  ZOSH_5J.cpp  ZOSH_6A.cpp  ZOSH_6B.cpp  ZOSH_6D.cpp  ZOSH_I3.cpp  ZOSH_TeamOlimpA.cpp  ZOSH_TeamOlimpB.cpp  ZOSH_TeamOlimpC.cpp  ZOSH_TeamOlimpD.cpp  ZOSH_TeamOlimpE.cpp  ZOSH_TeamOlimpG.cpp  ZOSH_TeamOlimpH.cpp  ZOSHoLIMP_A.cpp  ZOSHoLIMP_B.cpp  ZOSHoLIMP_C.cpp  ZOSHoLIMP_D.cpp  (+4 more)
testLosh2/: _testLosh2C.cpp  _testLosh2D.cpp  testLosh2A.cpp  testLosh2B.cpp
testZOSH1/: testZOSH1A.cpp  testZOSH1B.cpp  testZOSH1C.cpp  testZOSH1D.cpp  testZOSH1F.cpp  testZOSH1G.cpp
