cmake_minimum_required(VERSION 3.22)
project(mfti)

set(CMAKE_CXX_STANDARD 23)

add_executable(mfti mfti_2B.cpp)
add_executable(mfti_1A mfti_1A.cpp)
add_executable(mfti_1B mfti_1B.cpp)
add_executable(mfti_1C mfti_1C.cpp)
add_executable(mfti_2A mfti_2A.cpp)
add_executable(mfti_2B mfti_2B.cpp)
add_executable(mfti_2C mfti_2C.cpp)
add_executable(mfti_3A mfti_3A.cpp)
add_executable(mfti_3C mfti_3C.cpp)
add_executable(mfti_3B mfti_3B.cpp)
add_executable(mfti_4A mfti_4A.cpp)
add_executable(mfti_4B mfti_4B.cpp)
add_executable(mfti_4C mfti_4C.cpp)
add_executable(mfti_4D mfti_4D.cpp)
add_executable(mfti_olimpA mfti_olimpA.cpp)
add_executable(mfti_olimpC mfti_olimpB.cpp)
add_executable(mfti_5A mfti_5A.cpp)
add_executable(mfti_6A mfti_6A.cpp)
add_executable(mfti_6B mfti_6B.cpp)
add_executable(mfti_7C mfti_7C.cpp)
add_executable(mfti_5B mfti_5B.cpp)
add_executable(mfti_olimpteamA mfti_olimpteamA.cpp)
add_executable(mfti_olimpteamC mfti_olimpteamC.cpp)
add_executable(mfti_olimpteamI mfti_olimpteamI.cpp)
add_executable(mfti_olimpteamH mfti_olimpteamH.cpp)